Termino la primera parte de mi proyecto

--- a/pages/Clase3_modulo2.html
+++ b/pages/Clase3_modulo2.html
@@ -125,6 +125,7 @@ console.log(dia.getHours());
 <a href="../Index.html">ir a la pagina principal</a>
 <a href="./Operadores.html">Ir a la pagina de operadores de JS</a>
 <a href="./clase4_modulo3.html">Ir a la pagina de clase 04</a>
+<a href="./clase5_modulo3.html">Ir a la pagina de clase 05</a>
 
 <h1 style="text-align:center; margin-top: 50px; color:green">
     Bienvenido a la clase03 
