--- a/pages/Operadores.html
+++ b/pages/Operadores.html
@@ -12,6 +12,7 @@
     <a href="../Index.html">Ir a la pagina principal</a>
     <a href="../pages/Clase3_modulo2.html">Ir a la pagina de clase 03</a>
     <a href="../pages/clase4_modulo3.html">Ir a la pagina de clase 04</a>
+    <a href="../pages/clase5_modulo3.html">Ir a la pagina de clase 05</a>
 
 
     <script>
