--- a/pages/clase4_modulo3.html
+++ b/pages/clase4_modulo3.html
@@ -102,7 +102,7 @@ console.log('EL ultimo empleado es:'+ ultimo.nombre + ',' + 'su cargo es:' + ult
 <a href="../Index.html">ir a la pagina principal</a>
 <a href="./Operadores.html">Ir a la pagina de operadores de JS</a>
 <a href="./Clase3_modulo2.html">Ir a la pagina de clase 03</a>
-
+<a href="./clase5_modulo3.html">Ir a la pagina de clase 05</a>
 
 <h1 style="text-align:center; margin-top: 50px; color:green">
     Bienvenido a la clase04 
