termino la primera parte de mi proyecto

--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,7 @@
 <a href="./pages/Clase3_modulo2.html">Ir a la pagina de clase 03</a>
 <a href="./pages/clase4_modulo3.html">Ir a la pagina de clase 04</a>
 <a href="./pages/clase5_modulo3.html">Ir a la pagina de clase 05</a>
+<a href="./pages/clase6_modulo3.html">Ir a la pagina de clase 06</a>
 
     <h1 style="text-align:center; margin-top: 50px; color:green;">
         metodo para linkear archivos JS a HTML
