--- a/pages/clase5_modulo3.html
+++ b/pages/clase5_modulo3.html
@@ -16,6 +16,8 @@
     <a href="./Operadores.html">Ir a Operadores en JS</a>
     <a href="./Clase3_modulo2.html">Ir a la Clase3_modulo2</a>
     <a href="./clase4_modulo3.html">Ir a la clase04</a>
+    <a href="./clase6_modulo3.html">Ir a la pagina de clase 06</a>
+
   
 
     <h1 style="text-align:center; margin-top: 50px; color:green;">
